fixed HTML file to have no format errors

--- a/lab1.html
+++ b/lab1.html
@@ -13,6 +13,8 @@
 <body>
     <h1>SE 3316 Lab 1</h1>
     <p>List of Countries</p>
+
+    <!--Search noxes-->
     <div class="search-bars">
         <form id="searchForm" class="search-form">
             <div class="input-container">
@@ -24,77 +26,81 @@
             </div>
         </form>
     </div>
+
+    <!--Search results-->
     <div class="search-results" style="display: none;">
         <h2>Search Results</h2>
         <ul class="search-results-list"></ul>
     </div>
+
+    <!--List of countries below-->
     <ul class="main-ul">
         <li>
-            <img src="country_flags\ad.png" alt="Andorra flag">
+            <img src="country_flags/ad.png" alt="Andorra flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Andorra</li>
                 <li><b>Currency:</b> EUR (€)</li>
                 <li><b>Regions:</b> Andorra la Vella, Canillo, Encamp, Escaldes-Engordany, La Massana, Ordino, Sant
                     Julià de
                     Lòria</li>
-                <a href="https://en.wikipedia.org/wiki/Andorra">Andorra's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Andorra">Andorra's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\at.png" alt="Austrian flag">
+            <img src="country_flags/at.png" alt="Austrian flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Austria</li>
                 <li><b>Currency:</b> EUR (€)</li>
                 <li><b>Regions:</b> Vorarlberg, Tirol, Salzburg, Upper Austria, Lower Austria, Vienna, Styria,
                     Carinthia, Burgenland
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Austria">Austria's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Austria">Austria's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\au.png" alt="Australia flag">
+            <img src="country_flags/au.png" alt="Australia flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Australia</li>
                 <li><b>Currency:</b> AUD ($)</li>
                 <li><b>States:</b> New South Wales, Victoria, Queensland, Western Australia, South Australia, Tasmania
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Australia">Australia's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Australia">Australia's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\be.png" alt="Belgium flag">
+            <img src="country_flags/be.png" alt="Belgium flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Belgium</li>
                 <li><b>Currency:</b> EUR (€)</li>
                 <li><b>Regions:</b> Flemish, Brussels-Capital, Walloon
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Belgium">Belgium's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Belgium">Belgium's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\bg.png" alt="Bulgaria flag">
+            <img src="country_flags/bg.png" alt="Bulgaria flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Bulgaria</li>
                 <li><b>Currency:</b> BGN (Лв.)</li>
                 <li><b>Provinces:</b> Montana (Mihailovgrad), Lovech, Razgrad, Varna, Burgas, Haskovo, Plovdiv, Sofia
                     Province, Sofia City
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Bulgaria">Bulgaria's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Bulgaria">Bulgaria's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\ca.png" alt="Canada flag">
+            <img src="country_flags/ca.png" alt="Canada flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Canada</li>
                 <li><b>Currency:</b> CAD ($)</li>
                 <li><b>Provinces:</b> Ontario, Saskatchewan, Alberta, Manitoba, British Columbia, Northwest Territories,
                     Nova Scotia, Newfoundland and Labrador, New Brunswick, Prince Edward Island, Nunavut, Quebec, Yukon
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Canada">Canada's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Canada">Canada's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\ch.png" alt="Switzerland flag">
+            <img src="country_flags/ch.png" alt="Switzerland flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Switzerland</li>
                 <li><b>Currency:</b> CHF (CHf)</li>
@@ -103,11 +109,11 @@
                     City, Nidwalden, Central Switzerland, Swiss Alps, Bernese Oberland, Fribourg, Zug, Eastern
                     Switzerland
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Switzerland">Switzerland's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Switzerland">Switzerland's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\ci.png" alt="Ivory Coast flag">
+            <img src="country_flags/ci.png" alt="Ivory Coast flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Ivory Coast</li>
                 <li><b>Currency:</b> XOF (CFA)</li>
@@ -115,11 +121,11 @@
                     Sassandra-Marahoué District, Woroba, Montagnes, Zanzan, Sud-Comoé, Béller Region, Vallee du Bandama,
                     Gbêkê, Folon Region, Béré Region, Formager
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Ivory_Coast">Ivory Coast's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Ivory_Coast">Ivory Coast's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\cn.png" alt="China flag">
+            <img src="country_flags/cn.png" alt="China flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> China</li>
                 <li><b>Currency:</b> CNY (¥)</li>
@@ -127,22 +133,22 @@
                     Heilongjiang, Hunan, Jilin, Jiangsu, Jiangxi, Liaoning, Qinghai, Sichuan, Shandong, Shaanxi, Shanxi,
                     Yunnan, Zhejiang
                 </li>
-                <a href="https://en.wikipedia.org/wiki/China">China's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/China">China's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\cz.png" alt="Czechia flag">
+            <img src="country_flags/cz.png" alt="Czechia flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Czechia</li>
                 <li><b>Currency:</b> CZK (Kč)</li>
                 <li><b>Regions:</b> Central Bohemia, South Bohemia, Plzeň, Karlovy Vary, Ústí nad Labem, Liberec, Hradec
                     Králové, Pardubice, Vysočina, South Moravian, Olomouc, Zlín, Moravian-Silesia
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Czech_Republic">Czechia's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Czech_Republic">Czechia's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\de.png" alt="Germany flag">
+            <img src="country_flags/de.png" alt="Germany flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Germany</li>
                 <li><b>Currency:</b> EUR (€)</li>
@@ -150,21 +156,21 @@
                     Saxony, Mecklenburg-Vorpommern, North Rhine-Westphalia, Rhineland-Palatinate, Saarland,
                     Saxony-Anhalt, Schleswig-Holstein, Thuringia
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Germany">Germany's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Germany">Germany's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\dk.png" alt="Denmark flag">
+            <img src="country_flags/dk.png" alt="Denmark flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Denmark</li>
                 <li><b>Currency:</b> DKK (kr.)</li>
                 <li><b>Regions:</b> North Denmark, Central Denmark, Southern Denmark, Zealand, Capital Region of Denmark
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Denmark">Denmark's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Denmark">Denmark's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\gr.png" alt="Greece flag">
+            <img src="country_flags/gr.png" alt="Greece flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Greece</li>
                 <li><b>Currency:</b> EUR (€)</li>
@@ -173,22 +179,22 @@
                     Central Macedonia, Cylades, South Aegean, North Aegian, Aegean Islands, Achaea, Arcadia, Sporades,
                     Western Macedonia, Saronic Islands
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Greece">Greece's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Greece">Greece's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\il.png" alt="Israel flag">
+            <img src="country_flags/il.png" alt="Israel flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Israel</li>
                 <li><b>Currency:</b> ILS (₪)</li>
                 <li><b>States:</b> Northern District, Southern District, Negev, Central District, Jerusalem District,
                     Haifa District, Tel Aviv District, Jordan Rift Valley, Judea and Samaria Area
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Israel">Israel's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Israel">Israel's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\in.png" alt="India flag">
+            <img src="country_flags/in.png" alt="India flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> India</li>
                 <li><b>Currency:</b> INR (₹)</li>
@@ -197,11 +203,11 @@
                     India, Ladakh, Northeast India, Jharkhand, North India, East India, Jammu and Kashmir, Central
                     India, Madhya Pradesh
                 </li>
-                <a href="https://en.wikipedia.org/wiki/India">India's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/India">India's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\it.png" alt="Italy flag">
+            <img src="country_flags/it.png" alt="Italy flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Italy</li>
                 <li><b>Currency:</b> EUR (€)</li>
@@ -209,49 +215,49 @@
                     Campania, Veneto, Liguria, Friuli-Venezia Giulia, Marche, Abruzzo, Sardinia, Aosta Valley, Lazio,
                     Basilicata, Molise, Trentino-South Tyrol, Southern Italy, Northern Italy, Trentino, Dolomites
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Italy">Italy's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Italy">Italy's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\jp.png" alt="Japan flag">
+            <img src="country_flags/jp.png" alt="Japan flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Japan</li>
                 <li><b>Currency:</b> JPY (¥)</li>
                 <li><b>States:</b> Hokkaidō, Tōhoku, Kantō, Chūbu, Kansai, Chūgoku, Shikoku, Kyūshū & Okinawa
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Japan">Japan's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Japan">Japan's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\kr.png" alt="South Korea flag">
+            <img src="country_flags/kr.png" alt="South Korea flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> South Korea</li>
                 <li><b>Currency:</b> KRW (₩)</li>
                 <li><b>Provinces:</b> North Chungcheong, South Chungcheong, Gangwon, Gyeonggi, North Gyeongsang, South
                     Gyeongsang, North Jeolla, South Jeolla, Jeju
                 </li>
-                <a href="https://en.wikipedia.org/wiki/South_Korea">South Korea's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/South_Korea">South Korea's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\lb.png" alt="Lebanon flag">
+            <img src="country_flags/lb.png" alt="Lebanon flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Lebanon</li>
                 <li><b>Currency:</b> LBP (LBP)</li>
                 <li><b>Regions:</b> Akkar, Baalbeck-Hermel, Beirut, Bekaa, Mount Lebanon, North Lebanon, Nabatiyeh, and
                     South Lebanon
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Lebanon">Lebanon's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Lebanon">Lebanon's Wikipedia Page</a></li>
             </ul>
         </li>
         <li>
-            <img src="country_flags\sk.png" alt="Slovakia flag">
+            <img src="country_flags/sk.png" alt="Slovakia flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Slovakia</li>
                 <li><b>Currency:</b> EUR (€)</li>
                 <li><b>Regions:</b> Bratislava, Trnava, Trenčín, Nitra, Žilina, Banská Bystrica, Prešov, Košice
                 </li>
-                <a href="https://en.wikipedia.org/wiki/Slovakia">Slovakia's Wikipedia Page</a>
+                <li><a href="https://en.wikipedia.org/wiki/Slovakia">Slovakia's Wikipedia Page</a></li>
             </ul>
         </li>
     </ul>
